Template/main.json
{
  "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "metadata": {
    "_generator": {
      "name": "bicep",
      "version": "0.27.1.19265",
      "templateHash": "13220851086269118310"
    }
  },
  "parameters": {
    "location": {
      "type": "string",
      "defaultValue": "[resourceGroup().location]"
    },
    "targetSubnetName": {
      "type": "string"
    },
    "adminPasswordVM1": {
      "type": "securestring"
    },
    "adminPasswordVM2": {
      "type": "securestring"
    }
  },
  "resources": [
    {
      "type": "Microsoft.Resources/deployments",
      "apiVersion": "2022-09-01",
      "name": "vnetDeployment",
      "properties": {
        "expressionEvaluationOptions": {
          "scope": "inner"
        },
        "mode": "Incremental",
        "parameters": {
          "location": {
            "value": "[parameters('location')]"
          },
          "targetSubnetName": {
            "value": "[parameters('targetSubnetName')]"
          }
        },
        "template": {
          "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
          "contentVersion": "1.0.0.0",
          "metadata": {
            "_generator": {
              "name": "bicep",
              "version": "0.27.1.19265",
              "templateHash": "13892540756808206416"
            }
          },
          "parameters": {
            "location": {
              "type": "string",
              "defaultValue": "[resourceGroup().location]"
            },
            "addressSpace": {
              "type": "string",
              "defaultValue": "10.0.0.0/16"
            },
            "vnetName": {
              "type": "string",
              "defaultValue": "vnetMain"
            },
            "bastionNsgName": {
              "type": "string",
              "defaultValue": "bastionNSG"
            },
            "bastionSubnetName": {
              "type": "string",
              "defaultValue": "AzureBastionSubnet"
            },
            "bastionSubnetPrefix": {
              "type": "string",
              "defaultValue": "10.0.0.0/24"
            },
            "targetNsgName": {
              "type": "string",
              "defaultValue": "targetNSG"
            },
            "targetSubnetName": {
              "type": "string",
              "defaultValue": "TargetSubnet"
            },
            "targetSubnetPrefix": {
              "type": "string",
              "defaultValue": "10.0.1.0/24"
            }
          },
          "resources": [
            {
              "type": "Microsoft.Network/virtualNetworks",
              "apiVersion": "2023-04-01",
              "name": "[parameters('vnetName')]",
              "location": "[parameters('location')]",
              "properties": {
                "addressSpace": {
                  "addressPrefixes": [
                    "[parameters('addressSpace')]"
                  ]
                },
                "subnets": [
                  {
                    "name": "[parameters('bastionSubnetName')]",
                    "properties": {
                      "addressPrefix": "[parameters('bastionSubnetPrefix')]",
                      "networkSecurityGroup": {
                        "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('bastionNsgName'))]"
                      }
                    }
                  },
                  {
                    "name": "[parameters('targetSubnetName')]",
                    "properties": {
                      "addressPrefix": "[parameters('targetSubnetPrefix')]",
                      "networkSecurityGroup": {
                        "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('targetNsgName'))]"
                      }
                    }
                  }
                ]
              },
              "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('bastionNsgName'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('targetNsgName'))]"
              ]
            },
            {
              "type": "Microsoft.Network/networkSecurityGroups",
              "apiVersion": "2022-11-01",
              "name": "[parameters('bastionNsgName')]",
              "location": "[parameters('location')]",
              "properties": {
                "securityRules": [
                  {
                    "name": "AllowHttpsInbound",
                    "properties": {
                      "access": "Allow",
                      "destinationAddressPrefix": "*",
                      "destinationPortRange": "443",
                      "direction": "Inbound",
                      "priority": 100,
                      "protocol": "Tcp",
                      "sourceAddressPrefix": "*",
                      "sourcePortRange": "*"
                    }
                  },
                  {
                    "name": "AllowBastionCommunicationInbound",
                    "properties": {
                      "access": "Allow",
                      "destinationAddressPrefix": "VirtualNetwork",
                      "destinationPortRanges": [
                        "5701",
                        "8080"
                      ],
                      "direction": "Inbound",
                      "priority": 110,
                      "protocol": "*",
                      "sourceAddressPrefix": "VirtualNetwork",
                      "sourcePortRange": "*"
                    }
                  },
                  {
                    "name": "AllowSshRdpOutbound",
                    "properties": {
                      "access": "Allow",
                      "destinationAddressPrefix": "VirtualNetwork",
                      "destinationPortRanges": [
                        "22",
                        "3389"
                      ],
                      "direction": "Outbound",
                      "priority": 120,
                      "protocol": "*",
                      "sourceAddressPrefix": "*",
                      "sourcePortRange": "*"
                    }
                  },
                  {
                    "name": "AllowBastionCommunicationOutbound",
                    "properties": {
                      "access": "Allow",
                      "destinationAddressPrefix": "VirtualNetwork",
                      "destinationPortRanges": [
                        "5701",
                        "8080"
                      ],
                      "direction": "Outbound",
                      "priority": 130,
                      "protocol": "*",
                      "sourceAddressPrefix": "VirtualNetwork",
                      "sourcePortRange": "*"
                    }
                  }
                ]
              }
            },
            {
              "type": "Microsoft.Network/networkSecurityGroups",
              "apiVersion": "2023-04-01",
              "name": "[parameters('targetNsgName')]",
              "location": "[parameters('location')]",
              "properties": {
                "securityRules": [
                  {
                    "name": "AllowRdp",
                    "properties": {
                      "description": "Allow traffic from AzureBastionSubnet through RDP",
                      "access": "Allow",
                      "destinationAddressPrefix": "[parameters('bastionSubnetPrefix')]",
                      "destinationPortRange": "3389",
                      "direction": "Inbound",
                      "priority": 100,
                      "protocol": "Tcp",
                      "sourceAddressPrefix": "*",
                      "sourcePortRange": "*"
                    }
                  },
                  {
                    "name": "AllowSsh",
                    "properties": {
                      "description": "Allow traffic from AzureBastionSubnet through SSH",
                      "access": "Allow",
                      "destinationAddressPrefix": "[parameters('bastionSubnetPrefix')]",
                      "destinationPortRange": "22",
                      "direction": "Inbound",
                      "priority": 110,
                      "protocol": "Tcp",
                      "sourceAddressPrefix": "*",
                      "sourcePortRange": "*"
                    }
                  }
                ]
              }
            }
          ],
          "outputs": {
            "vnetMainId": {
              "type": "string",
              "value": "[resourceId('Microsoft.Network/virtualNetworks', parameters('vnetName'))]"
            }
          }
        }
      }
    },
    {
      "type": "Microsoft.Resources/deployments",
      "apiVersion": "2022-09-01",
      "name": "bastionDeployment",
      "properties": {
        "expressionEvaluationOptions": {
          "scope": "inner"
        },
        "mode": "Incremental",
        "parameters": {
          "location": {
            "value": "[parameters('location')]"
          },
          "bastionHostName": {
            "value": "bastionHost"
          },
          "bastionSubnetName": {
            "value": "AzureBastionSubnet"
          },
          "vnetName": {
            "value": "vnetMain"
          }
        },
        "template": {
          "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
          "contentVersion": "1.0.0.0",
          "metadata": {
            "_generator": {
              "name": "bicep",
              "version": "0.27.1.19265",
              "templateHash": "13901092214789158560"
            }
          },
          "parameters": {
            "location": {
              "type": "string",
              "defaultValue": "[resourceGroup().location]"
            },
            "bastionPublicIPName": {
              "type": "string",
              "defaultValue": "bastionPublicIP"
            },
            "bastionHostName": {
              "type": "string"
            },
            "bastionSubnetName": {
              "type": "string"
            },
            "vnetName": {
              "type": "string"
            }
          },
          "variables": {
            "bastionSubnetId": "[extensionResourceId(format('/subscriptions/{0}/resourceGroups/{1}', subscription().subscriptionId, resourceGroup().name), 'Microsoft.Network/virtualNetworks/subnets', parameters('vnetName'), parameters('bastionSubnetName'))]"
          },
          "resources": [
            {
              "type": "Microsoft.Network/publicIPAddresses",
              "apiVersion": "2023-04-01",
              "name": "[parameters('bastionPublicIPName')]",
              "location": "[parameters('location')]",
              "properties": {
                "publicIPAllocationMethod": "Static"
              },
              "sku": {
                "name": "Standard"
              }
            },
            {
              "type": "Microsoft.Network/bastionHosts",
              "apiVersion": "2022-01-01",
              "name": "[parameters('bastionHostName')]",
              "location": "[parameters('location')]",
              "properties": {
                "ipConfigurations": [
                  {
                    "name": "IpConf",
                    "properties": {
                      "subnet": {
                        "id": "[variables('bastionSubnetId')]"
                      },
                      "publicIPAddress": {
                        "id": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('bastionPublicIPName'))]"
                      }
                    }
                  }
                ]
              },
              "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', parameters('bastionPublicIPName'))]"
              ]
            }
          ],
          "outputs": {
            "vnetId": {
              "type": "string",
              "value": "[extensionResourceId(format('/subscriptions/{0}/resourceGroups/{1}', subscription().subscriptionId, resourceGroup().name), 'Microsoft.Network/virtualNetworks', parameters('vnetName'))]"
            },
            "bastionSubnetId": {
              "type": "string",
              "value": "[variables('bastionSubnetId')]"
            }
          }
        }
      },
      "dependsOn": [
        "[resourceId('Microsoft.Resources/deployments', 'vnetDeployment')]"
      ]
    },
    {
      "type": "Microsoft.Resources/deployments",
      "apiVersion": "2022-09-01",
      "name": "vm1Deployment",
      "properties": {
        "expressionEvaluationOptions": {
          "scope": "inner"
        },
        "mode": "Incremental",
        "parameters": {
          "adminPassword": {
            "value": "[parameters('adminPasswordVM1')]"
          },
          "location": {
            "value": "[parameters('location')]"
          },
          "vnetId": {
            "value": "[reference(resourceId('Microsoft.Resources/deployments', 'vnetDeployment'), '2022-09-01').outputs.vnetMainId.value]"
          },
          "targetSubnetName": {
            "value": "TargetSubnet"
          }
        },
        "template": {
          "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
          "contentVersion": "1.0.0.0",
          "metadata": {
            "_generator": {
              "name": "bicep",
              "version": "0.27.1.19265",
              "templateHash": "12749118556987498905"
            }
          },
          "parameters": {
            "location": {
              "type": "string",
              "defaultValue": "[resourceGroup().location]"
            },
            "niName": {
              "type": "string",
              "defaultValue": "networkInterfaceVM1"
            },
            "vmName": {
              "type": "string",
              "defaultValue": "vm1"
            },
            "vmSize": {
              "type": "string",
              "defaultValue": "Standard_B2s"
            },
            "publisher": {
              "type": "string",
              "defaultValue": "MicrosoftWindowsServer"
            },
            "offer": {
              "type": "string",
              "defaultValue": "WindowsServer"
            },
            "sku": {
              "type": "string",
              "defaultValue": "2016-Datacenter"
            },
            "version": {
              "type": "string",
              "defaultValue": "latest"
            },
            "vnetId": {
              "type": "string"
            },
            "targetSubnetName": {
              "type": "string"
            },
            "adminUsername": {
              "type": "string",
              "defaultValue": "adminuser"
            },
            "adminPassword": {
              "type": "securestring"
            }
          },
          "variables": {
            "targetSubnetRef": "[format('{0}/subnets/{1}', parameters('vnetId'), parameters('targetSubnetName'))]"
          },
          "resources": [
            {
              "type": "Microsoft.Network/networkInterfaces",
              "apiVersion": "2023-04-01",
              "name": "[parameters('niName')]",
              "location": "[parameters('location')]",
              "properties": {
                "ipConfigurations": [
                  {
                    "name": "ipconfig1",
                    "properties": {
                      "privateIPAllocationMethod": "Dynamic",
                      "subnet": {
                        "id": "[variables('targetSubnetRef')]"
                      }
                    }
                  }
                ]
              }
            },
            {
              "type": "Microsoft.Compute/virtualMachines",
              "apiVersion": "2023-03-01",
              "name": "[parameters('vmName')]",
              "location": "[parameters('location')]",
              "properties": {
                "hardwareProfile": {
                  "vmSize": "[parameters('vmSize')]"
                },
                "storageProfile": {
                  "imageReference": {
                    "publisher": "[parameters('publisher')]",
                    "offer": "[parameters('offer')]",
                    "sku": "[parameters('sku')]",
                    "version": "[parameters('version')]"
                  },
                  "osDisk": {
                    "createOption": "FromImage"
                  }
                },
                "osProfile": {
                  "computerName": "[parameters('vmName')]",
                  "adminUsername": "[parameters('adminUsername')]",
                  "adminPassword": "[parameters('adminPassword')]"
                },
                "networkProfile": {
                  "networkInterfaces": [
                    {
                      "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('niName'))]"
                    }
                  ]
                }
              },
              "dependsOn": [
                "[resourceId('Microsoft.Network/networkInterfaces', parameters('niName'))]"
              ]
            }
          ]
        }
      },
      "dependsOn": [
        "[resourceId('Microsoft.Resources/deployments', 'vnetDeployment')]"
      ]
    },
    {
      "type": "Microsoft.Resources/deployments",
      "apiVersion": "2022-09-01",
      "name": "vm2Deployment",
      "properties": {
        "expressionEvaluationOptions": {
          "scope": "inner"
        },
        "mode": "Incremental",
        "parameters": {
          "adminPassword": {
            "value": "[parameters('adminPasswordVM2')]"
          },
          "location": {
            "value": "[parameters('location')]"
          },
          "vnetId": {
            "value": "[reference(resourceId('Microsoft.Resources/deployments', 'vnetDeployment'), '2022-09-01').outputs.vnetMainId.value]"
          },
          "targetSubnetName": {
            "value": "TargetSubnet"
          }
        },
        "template": {
          "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
          "contentVersion": "1.0.0.0",
          "metadata": {
            "_generator": {
              "name": "bicep",
              "version": "0.27.1.19265",
              "templateHash": "3516143804156365338"
            }
          },
          "parameters": {
            "location": {
              "type": "string",
              "defaultValue": "[resourceGroup().location]"
            },
            "niName": {
              "type": "string",
              "defaultValue": "networkInterfaceVM2"
            },
            "vmName": {
              "type": "string",
              "defaultValue": "vm2"
            },
            "vmSize": {
              "type": "string",
              "defaultValue": "Standard_B2s"
            },
            "publisher": {
              "type": "string",
              "defaultValue": "MicrosoftWindowsServer"
            },
            "offer": {
              "type": "string",
              "defaultValue": "WindowsServer"
            },
            "sku": {
              "type": "string",
              "defaultValue": "2016-Datacenter"
            },
            "version": {
              "type": "string",
              "defaultValue": "latest"
            },
            "vnetId": {
              "type": "string"
            },
            "targetSubnetName": {
              "type": "string"
            },
            "adminUsername": {
              "type": "string",
              "defaultValue": "adminuser"
            },
            "adminPassword": {
              "type": "securestring"
            }
          },
          "variables": {
            "targetSubnetRef": "[format('{0}/subnets/{1}', parameters('vnetId'), parameters('targetSubnetName'))]"
          },
          "resources": [
            {
              "type": "Microsoft.Network/networkInterfaces",
              "apiVersion": "2023-04-01",
              "name": "[parameters('niName')]",
              "location": "[parameters('location')]",
              "properties": {
                "ipConfigurations": [
                  {
                    "name": "ipconfig2",
                    "properties": {
                      "privateIPAllocationMethod": "Dynamic",
                      "subnet": {
                        "id": "[variables('targetSubnetRef')]"
                      }
                    }
                  }
                ]
              }
            },
            {
              "type": "Microsoft.Compute/virtualMachines",
              "apiVersion": "2021-04-01",
              "name": "[parameters('vmName')]",
              "location": "[parameters('location')]",
              "properties": {
                "hardwareProfile": {
                  "vmSize": "[parameters('vmSize')]"
                },
                "storageProfile": {
                  "imageReference": {
                    "publisher": "[parameters('publisher')]",
                    "offer": "[parameters('offer')]",
                    "sku": "[parameters('sku')]",
                    "version": "[parameters('version')]"
                  },
                  "osDisk": {
                    "createOption": "FromImage"
                  }
                },
                "osProfile": {
                  "computerName": "[parameters('vmName')]",
                  "adminUsername": "[parameters('adminUsername')]",
                  "adminPassword": "[parameters('adminPassword')]"
                },
                "networkProfile": {
                  "networkInterfaces": [
                    {
                      "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('niName'))]"
                    }
                  ]
                }
              },
              "dependsOn": [
                "[resourceId('Microsoft.Network/networkInterfaces', parameters('niName'))]"
              ]
            }
          ]
        }
      },
      "dependsOn": [
        "[resourceId('Microsoft.Resources/deployments', 'vnetDeployment')]"
      ]
    }
  ]
}
